<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"

        android:layout_marginBottom="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="@dimen/_5sdp"

        card_view:cardBackgroundColor="@color/colorWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/dialog_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/mrp_order_confirmation"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorLightGrey" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <TextView

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/_5sdp"
                                android:text="@string/done_quantity_help_text"
                                android:textSize="@dimen/_16sdp" />

                            <EditText
                                android:id="@+id/edittext"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/_5sdp"
                                android:imeOptions="actionDone"
                                android:hint="@string/enter_quantities"
                                android:inputType="numberDecimal"
                                android:textSize="@dimen/_16sdp" />

                            <TextView
                                android:id="@+id/error"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/quantity_validation"
                                android:textColor="@color/android_red"
                                android:textSize="@dimen/_14sdp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <Button
                                android:id="@+id/btnBrowse"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_alignParentEnd="true"
                                android:text="@string/label_browse" />

                        </RelativeLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvImagePreview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"/>

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_btn_okay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@color/android_green"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/label_done"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>