<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.mitwill.mrp.views.fragments.SubContractorQRScanFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_confirm_batch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/work_center_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/work_order"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/activity_qrscanner_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/click_to_start_scanning"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/work_center_name" />

                <com.journeyapps.barcodescanner.DecoratedBarcodeView
                    android:id="@+id/fragment_subcontractor_qrscanner_qrview"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_qrscanner_product_name">

                    <ImageView
                        android:id="@+id/fragment_subcontractor_qrscanner_img_qr"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_qrgen" />


                    <ImageView
                        android:id="@+id/camera_closed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:visibility="invisible"
                        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

                </com.journeyapps.barcodescanner.DecoratedBarcodeView>


                <TextView
                    android:id="@+id/work_order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:text="@string/work_order_id"
                    android:textColor="@color/body_text_1"
                    android:textSize="@dimen/_18sdp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.536"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_subcontractor_qrscanner_qrview"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_confirm_batch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/android_green"
            android:text="@string/confirm_qr"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
